--- a/LiteTube/SearchPage.xaml
+++ b/LiteTube/SearchPage.xaml
@@ -37,13 +37,14 @@
                  x:Uid="SearchBox"
                  x:Name="SearchBox"
                  KeyUp="TextBox_KeyUp"
-                 Margin="8,0,6,8"/>
+                 Margin="24,0,24,24"/>
         </Border>
 
         <ContentPresenter Grid.Row="2"
                           Name="SearchList"
                           Content="{Binding}"
-                          ContentTemplate="{StaticResource LoadingListView}"/>
+                          ContentTemplate="{StaticResource LoadingListView}"
+                          Margin="10,12,10,0"/>
     </Grid>
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
