--- a/LiteTube/VideoPage.xaml
+++ b/LiteTube/VideoPage.xaml
@@ -219,10 +219,40 @@
                     <TextBlock Text="comments"
                                Style="{StaticResource PivotItemHeaderTextStyle}"/>
                 </phone:PivotItem.Header>
-                
-                <ContentPresenter Content="{Binding CommentsViewModel}"
-                                  ContentTemplate="{StaticResource CommentsLoadingListView}"
-                                  />
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        
+                        <Image Source="{Binding CommentsViewModel.ProfileImage}"
+                               Width="45"
+                               Height="45"
+                               VerticalAlignment="Top"/>
+                        <TextBox AcceptsReturn="True"
+                                 Grid.Column="1"
+                                 MaxHeight="150"
+                                 MinHeight="45"
+                                 Margin="8,0,0,0"/>
+                        <Button Height="45"
+                                VerticalAlignment="Top"
+                                ContentTemplate="{StaticResource HomeIcon}"
+                                Grid.Column="2"
+                                Margin="8,0,0,0" />
+                    </Grid>
+                    
+                    <ContentPresenter Content="{Binding CommentsViewModel}"
+                                      ContentTemplate="{StaticResource CommentsLoadingListView}"
+                                      Margin="{StaticResource DefaultControlMargin}"
+                                      Grid.Row="1"/>
+                </Grid>
             </phone:PivotItem>
         </phone:Pivot>
 
