--- a/LiteTube/App.xaml
+++ b/LiteTube/App.xaml
@@ -17,6 +17,7 @@
                 <ResourceDictionary Source="Themes/generic.xaml"/>
                 <ResourceDictionary Source="Themes/Button.xaml"/>
                 <ResourceDictionary Source="Themes/ToggleButton.xaml"/>
+                <ResourceDictionary Source="Themes/TextBox.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" FalseValue="Collapsed" TrueValue="Visible"/>
