--- a/LiteTube/Themes/generic.xaml
+++ b/LiteTube/Themes/generic.xaml
@@ -15,6 +15,7 @@
     <SolidColorBrush x:Key="NavigationPanelButtonPressedBackgroundBrush" Color="#FF404040" />
     <SolidColorBrush x:Key="PhoneSecondaryForegroundBrush" Color="#99000000" />
     <SolidColorBrush x:Key="PhoneSecondaryBackgroundBrush" Color="#50000000" />
+    <SolidColorBrush x:Key="PhoneTextBoxBackgroundBrush" Color="#FFFFFFFF" />
 
     <Thickness x:Key="DefaultTextBlockMargin">0,12,0,5</Thickness>
     <Thickness x:Key="DefaultControlMargin">0,12,0,0</Thickness>
