--- a/LiteTube/SectionPage.xaml
+++ b/LiteTube/SectionPage.xaml
@@ -33,7 +33,7 @@
                    Style="{StaticResource TitleTextBlockStyle}"/>
 
         <ContentPresenter Grid.Row="2"
-                          Margin="8,0,8,0"
+                          Margin="{StaticResource DefaultListBoxMargin}"
                           Content="{Binding}"
                           ContentTemplate="{StaticResource LoadingListView}"/>
     </Grid>
