--- a/LiteTube/Themes/generic.xaml
+++ b/LiteTube/Themes/generic.xaml
@@ -19,6 +19,7 @@
 
     <Thickness x:Key="DefaultTextBlockMargin">0,12,0,5</Thickness>
     <Thickness x:Key="DefaultControlMargin">0,12,0,0</Thickness>
+    <Thickness x:Key="DefaultListBoxMargin">24,12,15,0</Thickness>
     
     <Style x:Key="PageThemeStyle" TargetType="phone:PhoneApplicationPage">
         <Setter Property="shell:SystemTray.BackgroundColor" Value="{StaticResource NavigationPanelColor}" />
@@ -39,7 +40,7 @@
     </Style>
 
     <Style x:Key="PanoramaContentStyle" TargetType="ContentPresenter">
-        <Setter Property="Margin" Value="0,-20,0,0"/>
+        <Setter Property="Margin" Value="15,-24,0,0"/>
     </Style>
 
     <Style x:Key="PivotContentStyle" TargetType="ContentPresenter">
@@ -50,13 +51,17 @@
         <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeExtraLarge}"/>
         <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiLight}"/>
         <Setter Property="Foreground" Value="{StaticResource PhoneSubtleBrush}"/>
-        <Setter Property="Margin" Value="18,0,15,20"/>
+        <Setter Property="Margin" Value="24,0,15,0"/>
     </Style>
 
     <Style x:Key="LoadingTextBlockStyle" TargetType="TextBlock">
         <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeLarge}"/>
         <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiLight}"/>
         <Setter Property="Foreground" Value="{StaticResource PhoneSubtleBrush}"/>
+    </Style>
+
+    <Style x:Key="StretchedListBoxItemStyle" TargetType="ListBoxItem">
+        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
     </Style>
 
 </ResourceDictionary>
