--- a/LiteTube/VideoPage.xaml
+++ b/LiteTube/VideoPage.xaml
@@ -22,6 +22,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </phone:PhoneApplicationPage.Resources>
+    
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="{StaticResource PhoneBackgroundBrush}">
         <Grid.RowDefinitions>
@@ -229,7 +230,6 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         
                         <Image Source="{Binding CommentsViewModel.ProfileImage}"
@@ -241,17 +241,9 @@
                                  MaxHeight="150"
                                  MinHeight="45"
                                  Margin="8,0,0,0"
+                                 Name="CommentTextBox"
                                  Text="{Binding CommentsViewModel.CommentText, Mode=TwoWay}"
                                  IsEnabled="{Binding CommentsViewModel.IsAddingComment, Converter={StaticResource InverseBooleanConverter}}"/>
-                        <Button VerticalAlignment="Top"
-                                Content="&#xe122;" 
-                                FontFamily="Segoe UI Symbol"
-                                FontSize="20"
-                                Style="{StaticResource AppBarButtonStyle}"
-                                Command="{Binding CommentsViewModel.AddCommentCommand}"
-                                IsEnabled="{Binding CommentsViewModel.IsAddingComment, Converter={StaticResource InverseBooleanConverter}}"
-                                Grid.Column="2"
-                                Margin="8,2,0,0" />
                     </Grid>
                     
                     <ContentPresenter Content="{Binding CommentsViewModel}"
@@ -278,20 +270,17 @@
                     <TranslateTransform x:Name="PlayerMover"/>
                 </mmppf:MediaPlayer.RenderTransform>
             </mmppf:MediaPlayer>
-            <Canvas.RenderTransform>
-                <RotateTransform x:Name="PlayerRotator"/>
-            </Canvas.RenderTransform>
         </Canvas>
     </Grid>
 
-    <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" Mode="Minimized" x:Name="CommandBar">
+    <!--<phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" Mode="Minimized">
             <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Home.png" Text="Home" Click="Home_Click"/>
             <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Find.png" Text="Find" Click="Find_Click"/>
-            <!--<shell:ApplicationBar.MenuItems>
+            --><!--<shell:ApplicationBar.MenuItems>
                 <shell:ApplicationBarMenuItem Text="Copy video url" x:Uid="CopyVideoUrl"/>
-            </shell:ApplicationBar.MenuItems>-->
+            </shell:ApplicationBar.MenuItems>--><!--
         </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>-->
 
 </phone:PhoneApplicationPage>
