--- a/LiteTube/Themes/TextBox.xaml
+++ b/LiteTube/Themes/TextBox.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style TargetType="TextBox">
-        <Setter Property="BorderThickness" Value="0.99999"/>
+        <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="Background" Value="#FFFFFFFF"/>
         <Setter Property="Foreground" Value="#FF000000"/>
         <Setter Property="BorderBrush" Value="{StaticResource PhoneBorderBrush}"/>
@@ -53,7 +53,12 @@
                             </Grid>
                         </Border>
                         <Border x:Name="DisabledVisualElement" Background="#A5F7F7F7" BorderBrush="#A5F7F7F7" BorderThickness="{TemplateBinding BorderThickness}" Opacity="0" IsHitTestVisible="False"/>
-                        <Border x:Name="FocusVisualElement" BorderBrush="#FF6DBDD1" BorderThickness="{TemplateBinding BorderThickness}" Margin="1" Opacity="0" IsHitTestVisible="False"/>
+                        <Border x:Name="FocusVisualElement" 
+                                BorderBrush="#FF6DBDD1" 
+                                BorderThickness="{TemplateBinding BorderThickness}" 
+                                Margin="1" 
+                                Opacity="0" 
+                                IsHitTestVisible="False"/>
                         <Border x:Name="ValidationErrorElement" BorderThickness="1" CornerRadius="1" BorderBrush="#FFDB000C" Visibility="Collapsed">
                             <Grid Width="12" Height="12" HorizontalAlignment="Right" Margin="1,-4,-4,0" VerticalAlignment="Top" Background="Transparent">
                                 <Path Margin="1,3,0,0" Data="M 1,0 L6,0 A 2,2 90 0 1 8,2 L8,7 z" Fill="#FFDC000C"/>
@@ -65,7 +70,5 @@
             </Setter.Value>
         </Setter>
     </Style>
-
-
 
 </ResourceDictionary>
